# shp2pgsql

./: .gitignore  CMakeLists.txt
include/: shp2postgresql.h
res/: shp2postgresql.ui
src/: main.cpp  shp2postgresql.cpp
